src/FinancialForce ERP Core/objects/MessageType__c.object
<CustomObject>
    <customHelpPage>MessageTypeHelp</customHelpPage>
    <description>A type of message that can be passed through the system.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <inlineHelpText>The unique identifier for the message type. Can be used to quickly create a tree of multiple message types.</inlineHelpText>
        <label>Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExpiryCutoff__c</fullName>
        <label>Archive Cutoff</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>MessageType__c</referenceTo>
        <relationshipLabel>Child Message Types</relationshipLabel>
        <relationshipName>Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StorageExpiry__c</fullName>
        <label>Message Retention</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Message Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DeveloperName__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Message Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>